# prediction-model-fastapi

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  users.db
src/: alembic.ini  main.py
src/api/: __init__.py
src/api/api_v1/: __init__.py  auth.py  predict.py
src/api/depends/: __init__.py  auth.py  ml.py  security.py  session.py  user.py
src/core/: config.py  handlers.py  lifespan.py  logging.py
src/core/database/: __init__.py  base.py  db_client.py
src/core/security/: __init__.py  password.py  security.py
src/exceptions/: __init__.py  auth.py  base.py  ml.py
src/migrations/: env.py
src/migrations/versions/: 5ffd54a884b2_init_users_table.py
src/models/: __init__.py  base.py  user.py
src/repositories/: base.py  user.py
src/schemas/: __init__.py  auth.py  predict.py  user.py
src/services/: __init__.py  auth.py  ml.py
src/tests/: conftest.py  test_auth.py  test_predict.py  test_security.py  test_services.py
